# Wraith

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  wraith.ini  wraith.manifest
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/: PRD.md
docs/adr/: 0007-mutable-config-atomics-for-settings-dialog.md  0008-runonce-failsafe-for-taskmgr-cleanup.md  0009-appdata-fallback-for-config-location.md
docs/agents/: domain.md  issue-tracker.md
docs/research/: 01-hooks.md  02-message-pump.md  03-config.md  04-tray.md  05-lock-unlock.md  06-panic.md  07-single-instance.md  08-autostart.md  09-updater.md  10-resources.md  11-installer.md  12-ci.md
docs/spec/: 01-hooks.md  02-message-pump.md  03-config.md  04-tray.md  05-lock-unlock.md  06-panic.md  07-single-instance.md  08-autostart.md  09-updater.md  10-resources.md  11-installer.md  12-ci.md  SPEC.md
docs/superpowers/specs/: 2026-07-07-settings-dialog-modernization-design.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
installer/: wraith.nsi
src/: app.rs  autostart.rs  config.rs  hooks.rs  hotkey_recorder.rs  lock_policy.rs  main.rs  resource.rc  settings.rs  theme.rs  tray.rs  updater.rs
