[package]
name        = "wraith"
version     = "1.1.0"
edition     = "2021"
authors     = ["shadow-dragon-2002"]
description = "Physical input blocker — passes synthetic AI input, blocks hardware"
repository  = "https://github.com/shadow-dragon-2002/Wraith"
license = "GPL-3.0-only"

[[bin]]
name = "wraith"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Networking_WinHttp",
    "Win32_Security",
] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
